# polymarket-execution

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  cli.md  markets.md  redeem.md  stop_loss.md  take_profit.md
examples/: simple_chainlink_rtds.py  simple_markets_crypto.py  simple_orderbook_stream.py  simple_redeem.py  simple_stop_loss.py  simple_take_profit.py
examples/example_bot/: .env.example  README.md  bot.py  config.example.yaml  requirements.txt
src/polymarket_execution/: __init__.py  constants.py  exceptions.py  order_lifecycle.py  position.py  price_reference.py  recovery.py
src/polymarket_execution/cli/: __init__.py  main.py  markets.py  orders.py  position.py  redeem.py  stop_loss.py  take_profit.py
src/polymarket_execution/clob_ws/: __init__.py  models.py  orderbook.py
src/polymarket_execution/markets/: __init__.py  crypto.py  general.py
src/polymarket_execution/orders/: __init__.py  fills.py  place.py
src/polymarket_execution/price_feed/: __init__.py  base.py  chainlink_rtds.py
src/polymarket_execution/redeem/: __init__.py  core.py  safe.py  wrap.py
src/polymarket_execution/triggers/: __init__.py  base.py  stop_loss.py  take_profit.py
tests/: conftest.py  test_chainlink_rtds.py  test_cli_markets.py  test_cli_redeem.py  test_clob_ws.py  test_constants.py  test_markets_crypto.py  test_price_reference.py  test_recovery.py  test_redeem.py  test_triggers.py
