[project]
name = "polymarket-execution"
version = "0.1.0a0"
description = "Execution utilities for Polymarket CLOB: stop-loss, take-profit, redeem, position reconciliation, and order lifecycle"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Eduardo Doege", email = "eduardodoege87@gmail.com" }]
requires-python = ">=3.10"
keywords = [
    "polymarket",
    "trading",
    "clob",
    "prediction-markets",
    "stop-loss",
    "take-profit",
    "redeem",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "py-clob-client-v2>=1.0.0",
    "web3>=7.0.0",
    "typer>=0.12.0",
    "websockets>=14.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# polymarket-apis requires Python >=3.12; install becomes a no-op on 3.10/3.11
# (the markets.general module raises NotImplementedError on those versions until
# polymarket-apis ships a 3.10/3.11-compatible release).
markets = ["polymarket-apis>=0.5.0; python_version >= '3.12'"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/eduardodoege/polymarket-execution"
Issues = "https://github.com/eduardodoege/polymarket-execution/issues"
Repository = "https://github.com/eduardodoege/polymarket-execution"
Sponsor = "https://github.com/sponsors/eduardodoege"

[project.scripts]
polymarket-execution = "polymarket_execution.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polymarket_execution"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["polymarket_execution"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
disallow_untyped_decorators = true
